--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
 </head>
 <body>
+    
     <!-- input field -->
      <fieldset>
         <input type="text" id="cityInput" placeholder="searCity">
@@ -27,7 +28,7 @@
              <div class="card-flex" style="background:none;">
                 <div class="card-flexdown" id="currentLeftData">
                     <div class="card-flex">
-                        <img src="images\2261646-removebg-preview.png" alt="loka gole">
+                        <img src="images/2261646-removebg-preview.png" alt="loka gole" style="width: 150px; height: 150px;">
                         <h1>location</h1>
                     </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores odit, ab laborum non omnis quibusdam est ipsum, cum accusantium quisquam expedita similique dolore ad eligendi reiciendis, dolorum aliquid iste? Perspiciatis?</p>
@@ -174,7 +175,7 @@
                 </div>
                 <!-- temperature -->
                 <div>
-                    <h3>temperature</h3>
+                    <h4>temperature</h4>
                     <div class="card-flex">
                         <i class="bi bi-thermometer-sun"></i> 
                         <h1>27</h1>
@@ -182,7 +183,7 @@
                 </div>
                 <!-- humidity -->
                 <div>
-                    <h3>humidity</h3>
+                    <h4>humidity</h4>
                     <div class="card-flex">
                         <i class="bi bi-moisture"></i>
                         <h1>27</h1>
@@ -190,7 +191,7 @@
                 </div>
                 <!-- wind speed -->
                 <div>
-                    <h3>wind speed</h3>
+                    <h4>wind speed</h4>
                     <div class="card-flex">
                         <i class="bi bi-wind"></i>
                         <h1>27</h1>
@@ -198,14 +199,14 @@
                 </div>
             </div>
             <!-- pst day2 -->
-            <div class="flexCardBar">
+            <div class="flexCardBar" >
                 <div>
                     <h2>2024-09-11</h2>
                     <h1>Sunday</h1>
                 </div>
                 <!-- temperature -->
                 <div>
-                    <h3>temperature</h3>
+                    <h4>temperature</h4>
                     <div class="card-flex">
                         <i class="bi bi-thermometer-sun"></i> 
                         <h1>27</h1>
@@ -213,7 +214,7 @@
                 </div>
                 <!-- humidity -->
                 <div>
-                    <h3>humidity</h3>
+                    <h4>humidity</h4>
                     <div class="card-flex">
                         <i class="bi bi-moisture"></i>
                         <h1>27</h1>
@@ -221,7 +222,7 @@
                 </div>
                 <!-- wind speed -->
                 <div>
-                    <h3>wind speed</h3>
+                    <h4>wind speed</h4>
                     <div class="card-flex">
                         <i class="bi bi-wind"></i>
                         <h1>27</h1>
@@ -229,14 +230,14 @@
                 </div>
             </div>
             <!-- past day3 -->
-            <div class="flexCardBar">
+            <div class="flexCardBar" >
                 <div>
                     <h2>2024-09-11</h2>
                     <h1>Sunday</h1>
                 </div>
                 <!-- temperature -->
                 <div>
-                    <h3>temperature</h3>
+                    <h4>temperature</h4>
                     <div class="card-flex">
                         <i class="bi bi-thermometer-sun"></i> 
                         <h1>27</h1>
@@ -244,7 +245,7 @@
                 </div>
                 <!-- humidity -->
                 <div>
-                    <h3>humidity</h3>
+                    <h4>humidity</h4>
                     <div class="card-flex">
                         <i class="bi bi-moisture"></i>
                         <h1>27</h1>
@@ -252,7 +253,7 @@
                 </div>
                 <!-- wind speed -->
                 <div>
-                    <h3>wind speed</h3>
+                    <h4>wind speed</h4>
                     <div class="card-flex">
                         <i class="bi bi-wind"></i>
                         <h1>27</h1>
@@ -260,14 +261,14 @@
                 </div>
             </div>
             <!-- past day4 -->
-            <div class="flexCardBar">
+            <div class="flexCardBar" >
                 <div>
                     <h2>2024-09-11</h2>
                     <h1>Sunday</h1>
                 </div>
                 <!-- temperature -->
                 <div>
-                    <h3>temperature</h3>
+                    <h4>temperature</h4>
                     <div class="card-flex">
                         <i class="bi bi-thermometer-sun"></i> 
                         <h1>27</h1>
@@ -275,7 +276,7 @@
                 </div>
                 <!-- humidity -->
                 <div>
-                    <h3>humidity</h3>
+                    <h4>humidity</h4>
                     <div class="card-flex">
                         <i class="bi bi-moisture"></i>
                         <h1>27</h1>
@@ -283,7 +284,7 @@
                 </div>
                 <!-- wind speed -->
                 <div>
-                    <h3>wind speed</h3>
+                    <h4>wind speed</h4>
                     <div class="card-flex">
                         <i class="bi bi-wind"></i>
                         <h1>27</h1>
@@ -291,14 +292,14 @@
                 </div>
             </div>
             <!-- past day5 -->
-            <div class="flexCardBar">
+            <div class="flexCardBar" >
                 <div>
                     <h2>2024-09-11</h2>
                     <h1>Sunday</h1>
                 </div>
                 <!-- temperature -->
                 <div>
-                    <h3>temperature</h3>
+                    <h4>temperature</h4>
                     <div class="card-flex">
                         <i class="bi bi-thermometer-sun"></i> 
                         <h1>27</h1>
@@ -306,7 +307,7 @@
                 </div>
                 <!-- humidity -->
                 <div>
-                    <h3>humidity</h3>
+                    <h4>humidity</h4>
                     <div class="card-flex">
                         <i class="bi bi-moisture"></i>
                         <h1>27</h1>
@@ -314,7 +315,7 @@
                 </div>
                 <!-- wind speed -->
                 <div>
-                    <h3>wind speed</h3>
+                    <h4>wind speed</h4>
                     <div class="card-flex">
                         <i class="bi bi-wind"></i>
                         <h1>27</h1>
@@ -322,14 +323,14 @@
                 </div>
             </div>
             <!-- past day6 -->
-            <div class="flexCardBar">
+            <div class="flexCardBar" >
                 <div>
                     <h2>2024-09-11</h2>
                     <h1>Sunday</h1>
                 </div>
                 <!-- temperature -->
                 <div>
-                    <h3>temperature</h3>
+                    <h4>temperature</h4>
                     <div class="card-flex">
                         <i class="bi bi-thermometer-sun"></i> 
                         <h1>27</h1>
@@ -337,7 +338,7 @@
                 </div>
                 <!-- humidity -->
                 <div>
-                    <h3>humidity</h3>
+                    <h4>humidity</h4>
                     <div class="card-flex">
                         <i class="bi bi-moisture"></i>
                         <h1>27</h1>
@@ -345,7 +346,7 @@
                 </div>
                 <!-- wind speed -->
                 <div>
-                    <h3>wind speed</h3>
+                    <h4>wind speed</h4>
                     <div class="card-flex">
                         <i class="bi bi-wind"></i>
                         <h1>27</h1>
@@ -353,14 +354,14 @@
                 </div>
             </div>
             <!-- past day7 -->
-            <div class="flexCardBar">
+            <div class="flexCardBar" >
                 <div>
                     <h2>2024-09-11</h2>
                     <h1>Sunday</h1>
                 </div>
                 <!-- temperature -->
                 <div>
-                    <h3>temperature</h3>
+                    <h4>temperature</h4>
                     <div class="card-flex">
                         <i class="bi bi-thermometer-sun"></i> 
                         <h1>27</h1>
@@ -368,7 +369,7 @@
                 </div>
                 <!-- humidity -->
                 <div>
-                    <h3>humidity</h3>
+                    <h4>humidity</h4>
                     <div class="card-flex">
                         <i class="bi bi-moisture"></i>
                         <h1>27</h1>
@@ -376,7 +377,7 @@
                 </div>
                 <!-- wind speed -->
                 <div>
-                    <h3>wind speed</h3>
+                    <h4>wind speed</h4>
                     <div class="card-flex">
                         <i class="bi bi-wind"></i>
                         <h1>27</h1>
@@ -385,6 +386,8 @@
             </div>
         </div>
     </div>
+
+
     
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
