--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                     </div>
                 </div>
              </div>
-             <hr>
+             
              
             <!-- forcast 3 days -->
-             <div class="flexCardBar" style="background:none;">
+             <div class="flexCardBar" style="background: none;" id="forcast3days">
                 <!-- forcast day 1 -->
                 <div class="flexdownCardBar">
                     <!-- day-->
@@ -131,7 +131,7 @@
                     </div>
                 </div>
                 <!-- forcast day3 -->
-                <div class="flexdownCardBar">
+                <div class="flexCardBar">
                     <!-- day-->
                     <div>
                         <h2>2024-09-11</h2>
