--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
              
              
             <!-- forcast 3 days -->
-             <div class="flexCardBar" style="background: none;" id="forcast3days">
+             <div class="card-flex" style="background: none;" id="forcast3days">
                 <!-- forcast day 1 -->
                 <div class="flexdownCardBar">
                     <!-- day-->
